removed last column added accidentally

--- a/readme.adoc
+++ b/readme.adoc
@@ -1,122 +1,122 @@
 [options="header"]
 |===
-| Atomic Number | Symbol | English Name  | Czech Name    | Atomic Weight | 
-| 1             | H      | hydrogen      | vodík         | 1.008         | 
-| 2             | He     | helium        | helium        | 4.002602      | 
-| 3             | Li     | lithium       | lithium       | 6.94          | 
-| 4             | Be     | beryllium     | beryllium     | 9.0121831     | 
-| 5             | B      | boron         | bor           | 10.81         | 
-| 6             | C      | carbon        | uhlík         | 12.011        | 
-| 7             | N      | nitrogen      | dusík         | 14.007        | 
-| 8             | O      | oxygen        | kyslík        | 15.999        | 
-| 9             | F      | fluorine      | fluor         | 18.998403163  | 
-| 10            | Ne     | neon          | neon          | 20.1797       | 
-| 11            | Na     | sodium        | sodík         | 22.98976928   | 
-| 12            | Mg     | magnesium     | hořčík        | 24.305        | 
-| 13            | Al     | aluminium     | hliník        | 26.9815384    | 
-| 14            | Si     | silicon       | křemík        | 28.085        | 
-| 15            | P      | phosphorus    | fosfor        | 30.973761998  | 
-| 16            | S      | sulfur        | síra          | 32.06         | 
-| 17            | Cl     | chlorine      | chlor         | 35.45         | 
-| 18            | Ar     | argon         | argon         | 39.948        | 
-| 19            | K      | potassium     | draslík       | 39.0983       | 
-| 20            | Ca     | calcium       | vápník        | 40.078        | 
-| 21            | Sc     | scandium      | skandium      | 44.955908     | 
-| 22            | Ti     | titanium      | titan         | 47.867        | 
-| 23            | V      | vanadium      | vanad         | 50.9415       | 
-| 24            | Cr     | chromium      | chrom         | 51.9961       | 
-| 25            | Mn     | manganese     | mangan        | 54.938043     | 
-| 26            | Fe     | iron          | železo        | 55.845        | 
-| 27            | Co     | cobalt        | kobalt        | 58.933194     | 
-| 28            | Ni     | nickel        | nikl          | 58.6934       | 
-| 29            | Cu     | copper        | měď           | 63.546        | 
-| 30            | Zn     | zinc          | zinek         | 65.38         | 
-| 31            | Ga     | gallium       | gallium       | 69.723        | 
-| 32            | Ge     | germanium     | germanium     | 72.630        | 
-| 33            | As     | arsenic       | arsen         | 74.921595     | 
-| 34            | Se     | selenium      | selen         | 78.971        | 
-| 35            | Br     | bromine       | brom          | 79.904        | 
-| 36            | Kr     | krypton       | krypton       | 83.798        | 
-| 37            | Rb     | rubidium      | rubidium      | 85.4678       | 
-| 38            | Sr     | strontium     | stroncium     | 87.62         | 
-| 39            | Y      | yttrium       | yttrium       | 88.90584      | 
-| 40            | Zr     | zirconium     | zirkonium     | 91.224        | 
-| 41            | Nb     | niobium       | niob          | 92.90637      | 
-| 42            | Mo     | molybdenum    | molybden      | 95.95         | 
-| 43            | Tc     | technetium    | technecium    | [98][X]       | 
-| 44            | Ru     | ruthenium     | ruthenium     | 101.07        | 
-| 45            | Rh     | rhodium       | rhodium       | 102.90549     | 
-| 46            | Pd     | palladium     | palladium     | 106.42        | 
-| 47            | Ag     | silver        | stříbro       | 107.8682      | 
-| 48            | Cd     | cadmium       | kadmium       | 112.414       | 
-| 49            | In     | indium        | indium        | 114.818       | 
-| 50            | Sn     | tin           | cín           | 118.710       | 
-| 51            | Sb     | antimony      | antimon       | 121.760       | 
-| 52            | Te     | tellurium     | tellur        | 127.60        | 
-| 53            | I      | iodine        | jod           | 126.90447     | 
-| 54            | Xe     | xenon         | xenon         | 131.293       | 
-| 55            | Cs     | caesium       | cesium        | 132.90545196  | 
-| 56            | Ba     | barium        | baryum        | 137.327       | 
-| 57            | La     | lanthanum     | lanthan       | 138.90547     | 
-| 58            | Ce     | cerium        | cer           | 140.116       | 
-| 59            | Pr     | praseodymium  | praseodym     | 140.90766     | 
-| 60            | Nd     | neodymium     | neodym        | 144.242       | 
-| 61            | Pm     | promethium    | promethium    | [145][X]      | 
-| 62            | Sm     | samarium      | samarium      | 150.36        | 
-| 63            | Eu     | europium      | europium      | 151.964       | 
-| 64            | Gd     | gadolinium    | gadolinium    | 157.25        | 
-| 65            | Tb     | terbium       | terbium       | 158.925354    | 
-| 66            | Dy     | dysprosium    | dysprosium    | 162.500       | 
-| 67            | Ho     | holmium       | holmium       | 164.930328    | 
-| 68            | Er     | erbium        | erbium        | 167.259       | 
-| 69            | Tm     | thulium       | thulium       | 168.934218    | 
-| 70            | Yb     | ytterbium     | ytterbium     | 173.045       | 
-| 71            | Lu     | lutetium      | lutecium      | 174.9668      | 
-| 72            | Hf     | hafnium       | hafnium       | 178.49        | 
-| 73            | Ta     | tantalum      | tantal        | 180.94788     | 
-| 74            | W      | tungsten      | wolfram       | 183.84        | 
-| 75            | Re     | rhenium       | rhenium       | 186.207       | 
-| 76            | Os     | osmium        | osmium        | 190.23        | 
-| 77            | Ir     | iridium       | iridium       | 192.217       | 
-| 78            | Pt     | platinum      | platina       | 195.084       | 
-| 79            | Au     | gold          | zlato         | 196.966570    | 
-| 80            | Hg     | mercury       | rtuť          | 200.592       | 
-| 81            | Tl     | thallium      | thallium      | 204.38        | 
-| 82            | Pb     | lead          | olovo         | 207.2         | 
-| 83            | Bi     | bismuth       | bismut        | 208.98040     | 
-| 84            | Po     | polonium      | polonium      | [209][X]      | 
-| 85            | At     | astatine      | astat         | [210][X]      | 
-| 86            | Rn     | radon         | radon         | [222][X]      | 
-| 87            | Fr     | francium      | francium      | [223][X]      | 
-| 88            | Ra     | radium        | radium        | [226][X]      | 
-| 89            | Ac     | actinium      | aktinium      | [227][X]      | 
-| 90            | Th     | thorium       | thorium       | 232.0377      | 
-| 91            | Pa     | protactinium  | protaktinium  | 231.03588     | 
-| 92            | U      | uranium       | uran          | 238.02891     | 
-| 93            | Np     | neptunium     | neptunium     | [237][X]      | 
-| 94            | Pu     | plutonium     | plutonium     | [244][X]      | 
-| 95            | Am     | americium     | americium     | [243][X]      | 
-| 96            | Cm     | curium        | curium        | [247][X]      | 
-| 97            | Bk     | berkelium     | berkelium     | [247][X]      | 
-| 98            | Cf     | californium   | kalifornium   | [251][X]      | 
-| 99            | Es     | einsteinium   | einsteinium   | [252][X]      | 
-| 100           | Fm     | fermium       | fermium       | [257][X]      | 
-| 101           | Md     | mendelevium   | mendelevium   | [258][X]      | 
-| 102           | No     | nobelium      | nobelium      | [259][X]      | 
-| 103           | Lr     | lawrencium    | lawrencium    | [266][X]      | 
-| 104           | Rf     | rutherfordium | rutherfordium | [267][X]      | 
-| 105           | Db     | dubnium       | dubnium       | [268][X]      | 
-| 106           | Sg     | seaborgium    | seaborgium    | [269][X]      | 
-| 107           | Bh     | bohrium       | bohrium       | [270][X]      | 
-| 108           | Hs     | hassium       | hassium       | [270][X]      | 
-| 109           | Mt     | meitnerium    | meitnerium    | [278][X]      | 
-| 110           | Ds     | darmstadtium  | darmstadtium  | [281][X]      | 
-| 111           | Rg     | roentgenium   | roentgenium   | [282][X]      | 
-| 112           | Cn     | copernicium   | kopernicium   | [285][X]      | 
-| 113           | Uut    | nihonium      | nihonium      | [286][X]      | 
-| 114           | Fl     | flerovium     | flerovium     | [289][X]      | 
-| 115           | Uup    | moscovium     | moscovium     | [290][X]      | 
-| 116           | Lv     | livermorium   | livermorium   | [293][X]      | 
-| 117           | Uus    | tennessine    | tennessin     | [294][X]      | 
-| 118           | Uuo    | oganesson     | oganesson     | [294][X]      | 
+| Atomic Number | Symbol | English Name  | Czech Name    | Atomic Weight
+| 1             | H      | hydrogen      | vodík         | 1.008
+| 2             | He     | helium        | helium        | 4.002602
+| 3             | Li     | lithium       | lithium       | 6.94
+| 4             | Be     | beryllium     | beryllium     | 9.0121831
+| 5             | B      | boron         | bor           | 10.81
+| 6             | C      | carbon        | uhlík         | 12.011
+| 7             | N      | nitrogen      | dusík         | 14.007
+| 8             | O      | oxygen        | kyslík        | 15.999
+| 9             | F      | fluorine      | fluor         | 18.998403163
+| 10            | Ne     | neon          | neon          | 20.1797
+| 11            | Na     | sodium        | sodík         | 22.98976928
+| 12            | Mg     | magnesium     | hořčík        | 24.305
+| 13            | Al     | aluminium     | hliník        | 26.9815384
+| 14            | Si     | silicon       | křemík        | 28.085
+| 15            | P      | phosphorus    | fosfor        | 30.973761998
+| 16            | S      | sulfur        | síra          | 32.06
+| 17            | Cl     | chlorine      | chlor         | 35.45
+| 18            | Ar     | argon         | argon         | 39.948
+| 19            | K      | potassium     | draslík       | 39.0983
+| 20            | Ca     | calcium       | vápník        | 40.078
+| 21            | Sc     | scandium      | skandium      | 44.955908
+| 22            | Ti     | titanium      | titan         | 47.867
+| 23            | V      | vanadium      | vanad         | 50.9415
+| 24            | Cr     | chromium      | chrom         | 51.9961
+| 25            | Mn     | manganese     | mangan        | 54.938043
+| 26            | Fe     | iron          | železo        | 55.845
+| 27            | Co     | cobalt        | kobalt        | 58.933194
+| 28            | Ni     | nickel        | nikl          | 58.6934
+| 29            | Cu     | copper        | měď           | 63.546
+| 30            | Zn     | zinc          | zinek         | 65.38
+| 31            | Ga     | gallium       | gallium       | 69.723
+| 32            | Ge     | germanium     | germanium     | 72.630
+| 33            | As     | arsenic       | arsen         | 74.921595
+| 34            | Se     | selenium      | selen         | 78.971
+| 35            | Br     | bromine       | brom          | 79.904
+| 36            | Kr     | krypton       | krypton       | 83.798
+| 37            | Rb     | rubidium      | rubidium      | 85.4678
+| 38            | Sr     | strontium     | stroncium     | 87.62
+| 39            | Y      | yttrium       | yttrium       | 88.90584
+| 40            | Zr     | zirconium     | zirkonium     | 91.224
+| 41            | Nb     | niobium       | niob          | 92.90637
+| 42            | Mo     | molybdenum    | molybden      | 95.95
+| 43            | Tc     | technetium    | technecium    | [98][X]
+| 44            | Ru     | ruthenium     | ruthenium     | 101.07
+| 45            | Rh     | rhodium       | rhodium       | 102.90549
+| 46            | Pd     | palladium     | palladium     | 106.42
+| 47            | Ag     | silver        | stříbro       | 107.8682
+| 48            | Cd     | cadmium       | kadmium       | 112.414
+| 49            | In     | indium        | indium        | 114.818
+| 50            | Sn     | tin           | cín           | 118.710
+| 51            | Sb     | antimony      | antimon       | 121.760
+| 52            | Te     | tellurium     | tellur        | 127.60
+| 53            | I      | iodine        | jod           | 126.90447
+| 54            | Xe     | xenon         | xenon         | 131.293
+| 55            | Cs     | caesium       | cesium        | 132.90545196
+| 56            | Ba     | barium        | baryum        | 137.327
+| 57            | La     | lanthanum     | lanthan       | 138.90547
+| 58            | Ce     | cerium        | cer           | 140.116
+| 59            | Pr     | praseodymium  | praseodym     | 140.90766
+| 60            | Nd     | neodymium     | neodym        | 144.242
+| 61            | Pm     | promethium    | promethium    | [145][X]
+| 62            | Sm     | samarium      | samarium      | 150.36
+| 63            | Eu     | europium      | europium      | 151.964
+| 64            | Gd     | gadolinium    | gadolinium    | 157.25
+| 65            | Tb     | terbium       | terbium       | 158.925354
+| 66            | Dy     | dysprosium    | dysprosium    | 162.500
+| 67            | Ho     | holmium       | holmium       | 164.930328
+| 68            | Er     | erbium        | erbium        | 167.259
+| 69            | Tm     | thulium       | thulium       | 168.934218
+| 70            | Yb     | ytterbium     | ytterbium     | 173.045
+| 71            | Lu     | lutetium      | lutecium      | 174.9668
+| 72            | Hf     | hafnium       | hafnium       | 178.49
+| 73            | Ta     | tantalum      | tantal        | 180.94788
+| 74            | W      | tungsten      | wolfram       | 183.84
+| 75            | Re     | rhenium       | rhenium       | 186.207
+| 76            | Os     | osmium        | osmium        | 190.23
+| 77            | Ir     | iridium       | iridium       | 192.217
+| 78            | Pt     | platinum      | platina       | 195.084
+| 79            | Au     | gold          | zlato         | 196.966570
+| 80            | Hg     | mercury       | rtuť          | 200.592
+| 81            | Tl     | thallium      | thallium      | 204.38
+| 82            | Pb     | lead          | olovo         | 207.2
+| 83            | Bi     | bismuth       | bismut        | 208.98040
+| 84            | Po     | polonium      | polonium      | [209][X]
+| 85            | At     | astatine      | astat         | [210][X]
+| 86            | Rn     | radon         | radon         | [222][X]
+| 87            | Fr     | francium      | francium      | [223][X]
+| 88            | Ra     | radium        | radium        | [226][X]
+| 89            | Ac     | actinium      | aktinium      | [227][X]
+| 90            | Th     | thorium       | thorium       | 232.0377
+| 91            | Pa     | protactinium  | protaktinium  | 231.03588
+| 92            | U      | uranium       | uran          | 238.02891
+| 93            | Np     | neptunium     | neptunium     | [237][X]
+| 94            | Pu     | plutonium     | plutonium     | [244][X]
+| 95            | Am     | americium     | americium     | [243][X]
+| 96            | Cm     | curium        | curium        | [247][X]
+| 97            | Bk     | berkelium     | berkelium     | [247][X]
+| 98            | Cf     | californium   | kalifornium   | [251][X]
+| 99            | Es     | einsteinium   | einsteinium   | [252][X]
+| 100           | Fm     | fermium       | fermium       | [257][X]
+| 101           | Md     | mendelevium   | mendelevium   | [258][X]
+| 102           | No     | nobelium      | nobelium      | [259][X]
+| 103           | Lr     | lawrencium    | lawrencium    | [266][X]
+| 104           | Rf     | rutherfordium | rutherfordium | [267][X]
+| 105           | Db     | dubnium       | dubnium       | [268][X]
+| 106           | Sg     | seaborgium    | seaborgium    | [269][X]
+| 107           | Bh     | bohrium       | bohrium       | [270][X]
+| 108           | Hs     | hassium       | hassium       | [270][X]
+| 109           | Mt     | meitnerium    | meitnerium    | [278][X]
+| 110           | Ds     | darmstadtium  | darmstadtium  | [281][X]
+| 111           | Rg     | roentgenium   | roentgenium   | [282][X]
+| 112           | Cn     | copernicium   | kopernicium   | [285][X]
+| 113           | Uut    | nihonium      | nihonium      | [286][X]
+| 114           | Fl     | flerovium     | flerovium     | [289][X]
+| 115           | Uup    | moscovium     | moscovium     | [290][X]
+| 116           | Lv     | livermorium   | livermorium   | [293][X]
+| 117           | Uus    | tennessine    | tennessin     | [294][X]
+| 118           | Uuo    | oganesson     | oganesson     | [294][X]
 |===
